Update and rename README.md to README.rmd

--- a/README.rmd
+++ b/README.rmd
@@ -1,12 +1,9 @@
 # BC Differential Expression Analysis: first + second iteration 
-*VERSION 0.5:*
-First iteration (using STAR) to quantify gene expression of 158 Breast Cancer cell lines, obtained through the NCBI SRA database. 
-
-(QC, trimming and alignment performed using STAR (first iteration) and Salmon (second iteration) from http://usegalaxy.eu
 
 *VERSION 1.0:*
 Second iteration (using Salmon) to quantify transcripts from 158 Breast Cancer cell lines, obtained through the NCBI SRA database. 
 
 (QC, trimming and alignment performed using STAR (first iteration) and Salmon (second iteration) from http://usegalaxy.eu
 
-*NOTE:* DYT36T2, MCF75 missing salmon quant
+# Breast Cancer Subtyping of RNA-Seq data using genefu (AIMS, SSP, PAM50)
+
